# DAL

./: .gitignore  DAL patch 2.py  LICENSE  README.md  benchmark_enhanced.py  check_versions.py  debug_dal_generation.py  download_gguf_model.py  expander_test_results.json  pyproject.toml  run_dal.py  run_dal_v3.py  test_dal_generation.py  test_expander_fix.py  test_expander_fix_v2.py  test_expander_fix_v3.py  test_expander_smoke.py  test_expander_v2_comprehensive.py  test_local_model.py  test_version_integration.py  test_versioning.py
benchmark/: __init__.py  benchmark_expander.py  dal_runner.py  gpt2_runner.py  philosophy_benchmark.py  requirements.txt  run_benchmark.py  run_philosophy_benchmark.py
dal/: __init__.py  dal_types.py  dal_versions.py  expander.py  expander_v2.py  expander_v2_fixed.py  export.py  local_generator.py  markov.py  model_loader.py  pipeline.py  pipeline_v2.py  pipeline_v3.py  reflexive.py  sdt_injector.py  segmenter.py  stitcher.py  tagging.py  vectorizer.py
tests/: test_local_generator.py  test_model_loader.py  test_pipeline_v3.py  test_reflexive.py  test_sdt_injector.py
