[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dal-system"
version = "1.3.0"
description = "Document Augmentation and Language processing system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DAL Team"}
]
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.11.0",
    "numpy>=1.20.0",
    "tqdm>=4.62.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "nltk>=3.6.0"
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
    "transformers[torch]>=4.11.0",
    "torch>=1.9.0"
]
benchmark = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/dal_system"

[tool.setuptools.packages.find]
where = ["dal"]
include = ["dal/*"]
